--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Certificate of Completion 
+  uni: Frontend Foxes School
+  year: April, 2021 &mdash; June, 2021
   # awards:
-  # summary:
+  # summary: Completed a basic training course in frontend technologies.
