--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
   role: Contributor
   duration: 2016 &mdash; Present
   url: "https://github.com/probot/probot"
-  description: A framework for building GitHub Apps to automate and improve your workflow
+  description: A framework for building GitHub Apps to automate and improve your workflow. Changing this for the tutorial.
 
 # GitHub Classroom
 - project: GitHub Classroom
